# pastry

./: Cargo.toml  README.md  README.zh-CN.md  build-linux-app.sh  build-macos-app.sh  build-windows-app.ps1  build.rs
.github/workflows/: build-app.yml
docs/: COLOR_GUIDE.md  COLOR_GUIDE.zh-CN.md  JSONPATH_GUIDE.md  JSONPATH_GUIDE.zh-CN.md  LAN_SYNC_GUIDE.md  LAN_SYNC_GUIDE.zh-CN.md  SCRIPT_GUIDE.md  SCRIPT_GUIDE.zh-CN.md  WORKFLOW_GUIDE.md  WORKFLOW_GUIDE.zh-CN.md
scripts/: base64_decode.js  base64_encode.js  camel_case.js  extract_emails.js  kebab_case.js  md5_hash.js  pascal_case.js  sha256_hash.js  snake_case.js  timestamp_to_date.js  upper_snake_case.js  url_decode.js  url_encode.js  word_count.js
src/: main.rs
src/app/: message.rs  mod.rs  settings.rs  state.rs  subscription.rs  update.rs  view.rs
src/domain/: clipboard.rs
src/features/: mod.rs
src/features/clipboard/: message.rs  mod.rs  model.rs  state.rs  update.rs  view.rs
src/features/color_picker/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/features/json/: constants.rs  lines.rs  message.rs  mod.rs  state.rs  update.rs  view.rs
src/features/scripts/: message.rs  mod.rs  model.rs  state.rs  update.rs  view.rs
src/features/workflow_editor/: execution.rs  message.rs  mod.rs  state.rs  types.rs  update.rs  view.rs
src/features/workflow_manager/: message.rs  mod.rs  state.rs  update.rs  view.rs
src/platform/: hotkey.rs  mod.rs  screen.rs  svg.rs  tray.rs
src/services/: clipboard.rs  images.rs  mod.rs  scripts.rs  storage.rs  workflows.rs
src/ui/: constants.rs  language.rs  mod.rs  theme.rs
src/ui/util/: color.rs  hotkey.rs  mod.rs
src/ui/widgets/: button.rs  color_picker.rs  dialog.rs  icon.rs  list.rs  mod.rs  page.rs
src/ui/widgets/core/: mod.rs  overlay.rs
src/ui/widgets/overlay/: color_picker.rs
src/ui/widgets/style/: color_picker.rs  mod.rs
src/web/: index.html  manager.rs  mod.rs  qr.rs  server.rs  state.rs
